// Copyright 2020 Danggeun Market Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package com.eboolkiq;

option go_package = "github.com/daangn/eboolkiq";
option java_multiple_files = true;
option java_outer_classname = "QueueProto";
option java_package = "com.eboolkiq";

import "google/protobuf/duration.proto";

message Queue {
  // name 은 Queue 를 식별하기 위한 고유 이름이다.
  string name = 1;

  // auto_finish 는 Queue 에 들어온 Job 이 worker 에게 Fetch 되었을 때 바로 finish 처리하기
  // 위한 옵션이다.
  //
  // auto_finish 가 true 일 경우, Queue 의 Job 이 Fetch 된 순간 성공했다고 판단한다.
  bool auto_finish = 2;

  // timeout 은 worker 가 Queue 로부터 Fetch 한 Job 이 Finish 되기를 기다리는 시간이다.
  //
  // 이 값은 auto_finish 가 false 일 때 유효하며, worker 가 timeout 시간동안 Finish 를 하지
  // 않을 경우, Fetch 된 Job 은 실패로 판단 후 재시도를 시도한다.
  google.protobuf.Duration timeout = 3;

  // max_retry 는 Queue 에 들어오는 Job 의 기본 재시도 횟수이다. Job 에 재시도 횟수가 존재할
  // 경우, 해당 값이 우선시 된다.
  //
  // auto_finish 가 false 일 때 유효하며, Job 은 max_retry 횟수 만큼 재시도를 진행하되
  // -1 일 경우 무한히 재시도 한다.
  int32 max_retry = 4;
}
